- Oracle monitoring subagent improved (bugs fixed, new metrics)
- nxalarm tool supports commands add-comment and get-comments
- Source port number added to events generated from SNMP trap (available via "sourcePort" named parameter)
- Jira link: added possibility to set project's component for issues being created
- Management console:
    - Can show alarms for multiple selected objects
    - Fixed non-working ordering in event list in alarm details view
    - Fixed bug with LDAP user system rights
    - Added default search string for LDAP to select all objects: "(objectClass=*)"
    - Added device geolocation tracking and display on map
    - Filter in event processing policy editor
    - Fixed bug with deletion of subnet with corrected IP
    - Added command line option to open specific dashboard after login
- Android console:
	- Fix bug in notifying connection point not found
	- Fix bug in computing interface expanded list size (removed hardcoded values)
	- Added manage, unmanage, set expected state (up, down, ignore) and find switch port to interface list
	- Fix aesthetic problems in expandable list (graphs and interfaces list)
	- Integration of new support library
	- Target to new API version (20)
- Fixed issues: #51, #91, #324, #359, #409, #532, #542, #571, #563, #590, #593,
                #613, #617, #624, #626, #629, #632, #635, #638, #639, #642, #649


*
* 1.2.16
*

- Fixed database upgrade issues
- Fixed packaging issues
- Fixed bug causing outdated peer information on interface objects
- Fixed bug with upload to agent default path from server file store
- Instance display name for DCIs created via instance discovery
- DCIs created via instance discovery can be combined by instance into one chart on performance tab
- Transformation script terminated by "abort" call will not generate SYS_SCRIPT_ERROR event
- Database manager can detect and fix missing IData and TData tables
- NXSL: