@@ -75,7 +75,5 @@ public class OpenCertificateManager implements IWorkbenchWindowActionDelegate
 	@Override
 	public void selectionChanged(IAction action, ISelection selection)
 	{
-		// TODO Auto-generated method stub
-		
 	}
 }
